kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  type: ClusterIP
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
